--- a/force-app/main/default/classes/ParticipantVisitsService.cls
+++ b/force-app/main/default/classes/ParticipantVisitsService.cls
@@ -8,18 +8,24 @@ public with sharing class ParticipantVisitsService {
         if (VISIT_MODE_CURRENT == visitMode) {
             return getVisitWrappers(VisitService.getInstance().getVisits(' AND Status__c = \'' + VISIT_STATUS_PENDING + '\''));
         } else if (VISIT_MODE_PAST == visitMode) {
-            return getVisitWrappers(VisitService.getInstance().getVisits(' AND Status__c != \'' + VISIT_STATUS_PENDING + '\''));
+            return getVisitWrappers(
+                    ((PatientVisitService) ClassFactory.newInstance(PatientVisitService.class))
+                            .getVisits(' AND Status__c != \'' + VISIT_STATUS_PENDING + '\'')
+            );
         } else {
             return new List<VisitWrapper>();
         }
     }
 
-    private List<VisitWrapper> getVisitWrappers(List<Patient_Visit__c> visits) {
+    private List<VisitWrapper> getVisitWrappers(List<Visit__c> visits) {
 
+        List<VisitWrapper> visitWrappers = new List<VisitWrapper>();
+        if(visits == null || visits.isEmpty()) {
+            return visitWrappers;
+        }
         Map<Id, Task> tasksByVisitIds = getTasksByVisitIds(visits);
         Set<Id> uniqueId = new Set<Id>();
-        List<VisitWrapper> visitWrappers = new List<VisitWrapper>();
-        for (Patient_Visit__c singleVisit : visits) {
+        for (Visit__c singleVisit : visits) {
             if (uniqueId.add(singleVisit.Id)) {
                 visitWrappers.add(new VisitWrapper(singleVisit, tasksByVisitIds.get(singleVisit.Id)));
             }
@@ -27,17 +33,33 @@ public with sharing class ParticipantVisitsService {
         return visitWrappers;
     }
 
-    private Map<Id, Task> getTasksByVisitIds(List<Patient_Visit__c> visits) {
+    private List<VisitWrapper> getVisitWrappers(List<Patient_Visit__c> visits) {
+
+        List<VisitWrapper> visitWrappers = new List<VisitWrapper>();
+        if(visits == null || visits.isEmpty()) {
+            return visitWrappers;
+        }
+        Set<Id> uniqueId = new Set<Id>();
+        for (Patient_Visit__c singleVisit : visits) {
+            if (uniqueId.add(singleVisit.Id)) {
+                visitWrappers.add(new VisitWrapper(singleVisit));
+            }
+        }
+        return visitWrappers;
+    }
+
+    private Map<Id, Task> getTasksByVisitIds(List<Visit__c> visits) {
+
         Map<Id, Task> tasksByVisitIds = new Map<Id, Task>();
         List<Task> tasks = [
                 SELECT Id,
-                        Patient_Visit__c,
-                        Reminder_Date__c
+                        Visit__c,
+                        ActivityDate
                 FROM Task
-                WHERE Patient_Visit__c IN :new Map<Id, Patient_Visit__c>(visits).keySet() AND Status = 'Open'
+                WHERE Visit__c IN :new Map<Id, Visit__c>(visits).keySet() AND Status = 'Open'
         ];
         for (Task singleTask : tasks) {
-            tasksByVisitIds.put(singleTask.Patient_Visit__c, singleTask);
+            tasksByVisitIds.put(singleTask.Visit__c, singleTask);
         }
         return tasksByVisitIds;
     }
@@ -47,11 +69,11 @@ public with sharing class ParticipantVisitsService {
         @AuraEnabled
         public String completedDate;
         @AuraEnabled
-        public Patient_Visit__c visit;
+        public String visitId;
         @AuraEnabled
         public String name;
         @AuraEnabled
-        public String timeplane;
+        public String schedule;
         @AuraEnabled
         public String icons;
         @AuraEnabled
@@ -63,16 +85,24 @@ public with sharing class ParticipantVisitsService {
         @AuraEnabled
         public String reminderDate;
 
-        public VisitWrapper(Patient_Visit__c visit, Task task) {
-            this.visit = visit;
-            this.timeplane = visit.Timeplane__c;
+        public VisitWrapper(Patient_Visit__c visit) {
+            this.visitId = visit.Visit__r.Id;
+            this.schedule = visit.Visit_Schedule__c;
             this.icons = visit.Visit__r.Icons__c;
             this.isAdhoc = visit.Is_Adhoc__c;
             this.status = visit.Status__c;
             this.name = visit.Name;
-            this.task = task;
-            this.reminderDate = (this.task == null || this.task.Reminder_Date__c == null) ? Label.Home_Page_StudyVisit_No_Reminder_Date : DateService.format(this.task.Reminder_Date__c.date(), 'DD-MMM-YYYY');
             this.completedDate = visit.Completed_Date__c == null ? Label.StudyVisit_Information_Not_Available : DateService.format(visit.Completed_Date__c, 'DD-MMM-YYYY');
+        }
+
+        public VisitWrapper(Visit__c visit, Task task) {
+            this.visitId = visit.Id;
+            this.schedule = visit.Visit_Schedule__c;
+            this.icons = visit.Icons__c;
+            this.status = visit.Status__c;
+            this.name = visit.Name;
+            this.task = task;
+            this.reminderDate = (this.task == null || this.task.ActivityDate == null) ? Label.Home_Page_StudyVisit_No_Reminder_Date : DateService.format(this.task.ActivityDate, 'DD-MMM-YYYY');
         }
     }
 }
