--- a/force-app/main/default/classes/Test_ParticipantVisitsRemote.cls
+++ b/force-app/main/default/classes/Test_ParticipantVisitsRemote.cls
@@ -14,11 +14,12 @@ private class Test_ParticipantVisitsRemote {
                     return [
                             SELECT Id,
                                     Name,
-                                    Timeplane__c,
-                                    Visit__r.Icons__c,
+                                    Visit_Schedule__c,
+                                    Icons__c,
                                     Order__c,
-                                    Visit__r.Visit_Plan__c
-                            FROM Patient_Visit__c
+                                    Visit_Plan__c,
+                                    Status__c
+                            FROM Visit__c
                             ORDER BY Order__c
                             LIMIT 3
                     ];
@@ -27,11 +28,12 @@ private class Test_ParticipantVisitsRemote {
                     return [
                             SELECT Id,
                                     Name,
-                                    Timeplane__c,
-                                    Visit__r.Icons__c,
+                                    Visit_Schedule__c,
+                                    Icons__c,
                                     Order__c,
-                                    Visit__r.Visit_Plan__c
-                            FROM Patient_Visit__c
+                                    Visit_Plan__c,
+                                    Status__c
+                            FROM Visit__c
                             ORDER BY Order__c
                     ];
                 }
@@ -49,7 +51,7 @@ private class Test_ParticipantVisitsRemote {
         String preview = ParticipantVisitsRemote.getVisitsPreview();
         Test.stopTest();
 
-        List<Patient_Visit__c> previewVisits = VisitService.getInstance().getPreviewVisits();
+        List<Visit__c> previewVisits = VisitService.getInstance().getPreviewVisits();
         System.assertEquals(JSON.serialize(previewVisits), preview);
     }
 
@@ -61,7 +63,7 @@ private class Test_ParticipantVisitsRemote {
         List<ParticipantVisitsService.VisitWrapper> participantVisits = ParticipantVisitsRemote.getParticipantVisits('Current');
         Test.stopTest();
 
-        List<Patient_Visit__c> visitsAll = VisitService.getInstance().getVisits(null);
+        List<Visit__c> visitsAll = VisitService.getInstance().getVisits(null);
         System.assertEquals(visitsAll.size(), participantVisits.size());
     }
 
@@ -100,7 +102,7 @@ private class Test_ParticipantVisitsRemote {
         for(Integer i = 0; i < 5; i++) {
             visits.add(new Visit__c(
                     Name = 'TestVisit'+i,
-                    Timeplane__c = 'Week'+i,
+                    Visit_Schedule__c = 'Week'+i,
                     Icons__c = iconsApiName.get(i),
                     Order__c = i,
                     Visit_Plan__c = vp.Id
