--- a/force-app/main/default/classes/VisitService.cls
+++ b/force-app/main/default/classes/VisitService.cls
@@ -2,7 +2,7 @@
  * Created by Igor Malyuta on 12.04.2019.
  */
 
-public with sharing class VisitService {
+public inherited sharing class VisitService {
 
     private static VisitService instance;
 
@@ -15,34 +15,38 @@ public with sharing class VisitService {
         instance = (VisitService) Test.createStub(VisitService.class, mock);
     }
 
-    public List<Patient_Visit__c> getVisits(String filter) {
+    public List<Visit__c> getVisits(String filter) {
         return getVisits(filter, null);
     }
 
-    public List<Patient_Visit__c> getPreviewVisits() {
+    public List<Visit__c> getPreviewVisits() {
         return getVisits(null, 3);
     }
 
-    private List<Patient_Visit__c> getVisits(String filter, Integer limitNumber) {
+    private List<Visit__c> getVisits(String filter, Integer limitNumber) {
 
-        if(!ParticipantService.getInstance().getState().showVisits) return null;
+        ParticipantService.ParticipantState pState = ((ParticipantService) ClassFactory.newInstance(ParticipantService.class)).getState();
+        if (pState == null || pState.ctp == null || pState.ctp.Visit_Plan__c == null || !pState.showVisits) {
+            return null;
+        }
 
-        List<String> fields = new List<String>{
-                'Name',
-                'Timeplane__c',
-                'Visit__r.Icons__c',
-                'Status__c',
-                'Completed_Date__c',
-                'Is_Adhoc__c'
-        };
-        String visitPlan = ParticipantService.getInstance().getState().pse.Clinical_Trial_Profile__r.Visit_Plan__c;
+        String visitsQuery = 'SELECT ' +
+                'Name, ' +
+                'Visit_Schedule__c, ' +
+                'Icons__c, ' +
+                'Status__c ' +
+                'FROM Visit__c ';
+        visitsQuery += 'WHERE Visit_Plan__c = \'' + pState.ctp.Visit_Plan__c + '\'';
+        if (filter != null) {
+            visitsQuery += filter;
+        }
+        visitsQuery += ' ORDER BY Order__c';
+        if(limitNumber != null) {
+            visitsQuery += ' LIMIT ' + limitNumber;
+        }
 
-        String fullFilter = 'Visit__r.Visit_Plan__c = \'' + visitPlan + '\'';
-        if (filter != null) fullFilter += filter;
-        String orderBy = 'Order__c';
-
-        List<Patient_Visit__c> visits = DatabaseService.getInstance().queryImpl(fields, Patient_Visit__c.getSObjectType(), fullFilter, orderBy, limitNumber);
-	    TranslateHelper.translate(visits);
+        List<Visit__c> visits = ((DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class)).query(visitsQuery, true);
+        TranslateHelper.translate(visits);
         return visits;
     }
 }
