PEH-352 change Visit Legend

--- a/force-app/main/default/classes/CollectionUtil.cls
+++ b/force-app/main/default/classes/CollectionUtil.cls
@@ -1,15 +1,18 @@
 public with sharing class CollectionUtil {
 
-    public static List<String> getListOfIdsWrappedInApostrophes(Set<Id> idsSet) {
-
-        return CollectionUtil.getListOfIdsWrappedInApostrophes(CollectionUtil.getStringsSetFromIdsSet(idsSet));
+    public static List<String> wrapInApostrophes(Set<Id> idsSet) {
+        return CollectionUtil.wrapInApostrophes(CollectionUtil.getStringsSetFromIdsSet(idsSet));
     }
 
-    public static List<String> getListOfIdsWrappedInApostrophes(Set<String> idsSet) {
+    public static List<String> wrapInApostrophes(List<String> valuesList) {
+        return CollectionUtil.wrapInApostrophes(new Set<String>(valuesList));
+    }
+
+    public static List<String> wrapInApostrophes(Set<String> valuesSet) {
 
         List<String> result = new List<String>();
-        for(String singleId : idsSet) {
-            result.add('\'' + singleId + '\'');
+        for(String singleValue : valuesSet) {
+            result.add('\'' + singleValue + '\'');
         }
         return result;
     }
@@ -20,5 +23,9 @@ public with sharing class CollectionUtil {
             result.add(singleId);
         }
         return result;
+    }
+
+    public static String joinByComa(List<String> listOfStrings) {
+        return String.join(listOfStrings, ',');
     }
 }
