--- a/force-app/main/default/classes/IconPlanetVisitInfoEditRemote.cls
+++ b/force-app/main/default/classes/IconPlanetVisitInfoEditRemote.cls
@@ -5,21 +5,21 @@
 public with sharing class IconPlanetVisitInfoEditRemote {
 
     @AuraEnabled
-    public static void saveIconInfo(List<icons_detail__c> iconsDetails) {
+    public static void saveIconInfo(List<Icon_Details__c> iconsDetails) {
         update iconsDetails;
     }
-    @AuraEnabled 
-    public static List<icons_detail__c> getIconsDescription(String visitPlanId) {
-        List<icons_detail__c> icondetails = [
+    @AuraEnabled
+    public static List<Icon_Details__c> getIconsDescription(String visitPlanId) {
+        List<Icon_Details__c> iconsDetails = [
                 SELECT Id
                         ,Name
-                        ,description__c
+                        ,Description__c
                         ,Icons_package__c
-                        ,label__c
-                FROM icons_detail__c
-                WHERE Icons_package__c IN: [SELECT Id From Icons_package__c Where Visit_plan__c = :visitPlanId]
+                        ,Label__c
+                FROM Icon_Details__c
+                WHERE Icons_package__c IN: [SELECT Id FROM Icons_package__c WHERE Visit_Plan__c = :visitPlanId]
         ];
-        return icondetails;
+        return iconsDetails;
     }
 
 }
