--- a/force-app/main/default/classes/Test_AlertRemote.cls
+++ b/force-app/main/default/classes/Test_AlertRemote.cls
@@ -9,8 +9,9 @@ private class Test_AlertRemote {
     static void test1() {
         TestData.loadTestData();
         Test.startTest();
-        TestData testData = new TestData();
-        System.runAs(testData.participantUser){
+        TestData testDataInstance = new TestData();
+        testDataInstance.createPSE();
+        System.runAs(testDataInstance.participantUser){
             List<Alert> alerts = (List<Alert>)JSON.deserialize(AlertsRemote.getAlerts(CommunityService.USER_MODE_PARTICIPANT), List<Alert>.class);
             AlertsRemote.setAlertViewed(alerts[0].id);
             
