--- a/force-app/main/default/classes/Test_SendEmailToParticipant.cls
+++ b/force-app/main/default/classes/Test_SendEmailToParticipant.cls
@@ -9,20 +9,21 @@ private class Test_SendEmailToParticipant {
     static void testBehavior() {
         TestData.loadTestData();
         Test.startTest();
-        TestData testData = new TestData();
+        TestData testDataInstance = new TestData();
+        testDataInstance.createPSE();
         Task task = new Task(
                 Reminder_Date__c = Datetime.now(),
                 Subject = 'Some',
-                OwnerId = testData.participantUser.Id
+                OwnerId = testDataInstance.participantUser.Id
         );
         insert task;
         SendEmailToParticipant.sendEmailNotificationWithDelegates(new List<Task>{task});
         task = new Task(
                 Reminder_Date__c = Datetime.now(),
                 Subject = 'Some',
-                OwnerId = testData.participantUser.Id,
+                OwnerId = testDataInstance.participantUser.Id,
                 Task_Type__c = 'Visit',
-                WhatId = testData.pse.Id
+                WhatId = testDataInstance.pse.Id
         );
         SendEmailToParticipant.sendEmailNotificationWithDelegates(new List<Task>{task});
         Test.stopTest();
