--- a/force-app/main/default/classes/IconPlanetVisitInfoEditRemote.cls
+++ b/force-app/main/default/classes/IconPlanetVisitInfoEditRemote.cls
@@ -8,7 +8,7 @@ public with sharing class IconPlanetVisitInfoEditRemote {
     public static void saveIconInfo(List<icons_detail__c> iconsDetails) {
         update iconsDetails;
     }
-    @AuraEnabled 
+    @AuraEnabled
     public static List<icons_detail__c> getIconsDescription(String visitPlanId) {
         List<icons_detail__c> icondetails = [
                 SELECT Id
@@ -19,7 +19,29 @@ public with sharing class IconPlanetVisitInfoEditRemote {
                 FROM icons_detail__c
                 WHERE Icons_package__c IN: [SELECT Id From Icons_package__c Where Visit_plan__c = :visitPlanId]
         ];
-        return icondetails;
+        if (!icondetails.isEmpty()) {
+            return icondetails;
+        }else {
+            return createDefaultIconDetails();
+        }
+
+    }
+    private static List<icons_detail__c> createDefaultIconDetails() {
+        try {
+            List<PicklistEntry> picklistEntries = Visit__c.Icons__c.getDescribe().picklistValues;
+            List<icons_detail__c> iconDetails = new List<icons_detail__c>();
+            for (PicklistEntry entry : picklistEntries) {
+                icons_detail__c det = new icons_detail__c();
+                det.Name = entry.value;
+                iconDetails.add(det);
+            }
+            insert iconDetails;
+            return iconDetails;
+        } catch (Exception e) {
+            AuraHelper.throwException(e);
+        }
+        return null;
+
     }
 
 }
