--- a/force-app/main/default/classes/IconPlanetVisitInfoEditRemote.cls
+++ b/force-app/main/default/classes/IconPlanetVisitInfoEditRemote.cls
@@ -5,18 +5,18 @@
 public with sharing class IconPlanetVisitInfoEditRemote {
 
     @AuraEnabled
-    public static void saveIconInfo(List<icons_detail__c> iconsDetails) {
+    public static void saveIconInfo(List<Icon_details__c> iconsDetails) {
         update iconsDetails;
     }
     @AuraEnabled
-    public static List<icons_detail__c> getIconsDescription(String visitPlanId) {
-        List<icons_detail__c> icondetails = [
+    public static List<Icon_details__c> getIconsDescription(String visitPlanId) {
+        List<Icon_details__c> icondetails = [
                 SELECT Id
                         ,Name
                         ,description__c
                         ,Icons_package__c
                         ,label__c
-                FROM icons_detail__c
+                FROM Icon_details__c
                 WHERE Icons_package__c IN: [SELECT Id From Icons_package__c Where Visit_plan__c = :visitPlanId]
         ];
         if (!icondetails.isEmpty()) {
@@ -26,12 +26,12 @@ public with sharing class IconPlanetVisitInfoEditRemote {
         }
 
     }
-    private static List<icons_detail__c> createDefaultIconDetails() {
+    private static List<Icon_details__c> createDefaultIconDetails() {
         try {
             List<PicklistEntry> picklistEntries = Visit__c.Icons__c.getDescribe().picklistValues;
-            List<icons_detail__c> iconDetails = new List<icons_detail__c>();
+            List<Icon_details__c> iconDetails = new List<Icon_details__c>();
             for (PicklistEntry entry : picklistEntries) {
-                icons_detail__c det = new icons_detail__c();
+                Icon_details__c det = new Icon_details__c();
                 det.Name = entry.value;
                 iconDetails.add(det);
             }
