--- a/force-app/main/default/classes/PatientVisitService.cls
+++ b/force-app/main/default/classes/PatientVisitService.cls
@@ -11,6 +11,10 @@ public inherited sharing class PatientVisitService {
     public List<VisitWrapper> getVisitWrappers(String visitMode, Integer limitNumber) {
         return this.getVisitWrappers(this.getVisits(visitMode, limitNumber));
     }
+    
+    public List<Patient_Visit__c> getVisits(String filter) {
+        return null;
+    }
 
     private List<Patient_Visit__c> getVisits(String visitMode, Integer limitNumber) {
 
